--- a/TestTechniqueSpotify/Views/Shared/_Layout.cshtml
+++ b/TestTechniqueSpotify/Views/Shared/_Layout.cshtml
@@ -1,25 +1,32 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TestTechniqueSpotify</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/tailwind.css" asp-append-version="true" />
+
 </head>
+
 <body>
     <header class="bg-white">
-      <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
-        <div class="flex items-center gap-x-12">
-          <a href="#" class="-m-1.5 p-1.5">
-            <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
-          </a>
-          <div class="flex gap-x-12">
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Bibliothèque</a>
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Rechercher</a>
-          </div>
-        </div>
-      </nav>
+        <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
+            <div class="flex items-center gap-x-12">
+                <a href="#" class="-m-1.5 p-1.5">
+                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+                        alt="">
+                </a>
+                <div class="flex gap-x-12">
+                    <a class="text-sm font-semibold leading-6 text-gray-900" asp-area="" asp-controller="Library"
+                        asp-action="Index">Bibliothèque</a>
+                    <a class="text-sm font-semibold leading-6 text-gray-900" asp-area="" asp-controller="Library"
+                        asp-action="Search">Rechercher</a>
+                    <a class="text-sm font-semibold leading-6 text-gray-900" href="#Info"> Information </a>
+                </div>
+            </div>
+        </nav>
 
     </header>
     <div class="max-w-7xl mx-auto">
@@ -28,7 +35,27 @@
         </main>
     </div>
 
+    <div id="Info" class="overlay">
+        <div class="popup">
+            <a class="close" href="#">&times;</a>
+            <div class="popup_header">
+                <h1>Noter les titres selon : </h1>
+            </div>
+            <div class="content">
+                <div class="flex">
+                    <a class="dot yellow taste"></a>
+                    <p> Votre goût</p>
+                </div>
+                <div class="flex">
+                    <a class="dot blue originality"></a>
+                    <p> Son originalité</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+
 </html>
