--- a/TestTechniqueSpotify/wwwroot/css/site.css
+++ b/TestTechniqueSpotify/wwwroot/css/site.css
@@ -8,7 +8,11 @@ html {
   }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+.btn:focus,
+.btn:active:focus,
+.btn-link.nav-link:focus,
+.form-control:focus,
+.form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
@@ -19,4 +23,307 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+
+.fit-picture {
+  width: 100px;
+  border-radius: 15px;
+}
+
+.picture {
+  margin-right: 5%;
+  margin-left: 10%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.SongData {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+
+.SongData p {
+  font-size: medium;
+  text-align: center;
+}
+
+.criteria {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 5%;
+  margin-left: 10%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.Data {
+  height: 120px;
+  display: flex;
+  box-sizing: border-box;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+  margin-top: 3%;
+  margin-right: 3%;
+  margin-left: 3%;
+}
+
+.NewSong {
+  display: flex;
+  align-items: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.btn-newSong {
+  width: auto;
+  box-sizing: border-box;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  text-align: center;
+  background: #edf2fb;
+  width: 350px;
+  height: 50px;
+  display: block;
+  margin: auto;
+}
+
+.AddNewSong {
+  width: auto;
+  box-sizing: border-box;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  text-align: center;
+  background: #edf2fb;
+  width: 50px;
+  height: 50px;
+  display: block;
+  margin: auto;
+  cursor: pointer;
+}
+
+.centerP {
+  margin-top: 17%;
+  font-size: 25px;
+}
+
+a p {
+  margin-top: 3%;
+}
+
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2.5rem;
+  width: 90%;
+  max-width: 1000px;
+  margin: 10vh auto;
+}
+
+.card {
+  border-radius: 16px;
+  box-shadow: 0 30px 30px -25px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0 30px 30px -25px rgba(#4133B7, 0.25); */
+  max-width: 300px;
+}
+
+.information {
+  background-color: white;
+  padding: 1.5rem;
+
+}
+
+
+body {
+  font-family: "Spline Sans", sans-serif;
+  line-height: 1.5;
+  min-height: 100vh;
+  background-color: rgba(234, 238, 246, 0.25);
+}
+
+.dot {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: inline-block;
+}
+
+.blue {
+  background-color: #0ec4f1;
+}
+
+.yellow {
+  background-color: #e2f10ed2;
+}
+
+.white {
+  background-color: white;
+}
+
+.taste:hover {
+  background-color: #a1ac0bd2;
+}
+
+.originality:hover {
+  background-color: #0d9cc0;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  margin: auto;
+}
+
+.search input {
+  width: 300px;
+  border: 2px solid black;
+  padding: 10px;
+  border-radius: 30px;
+  margin: auto;
+  z-index: 8;
+}
+
+.search i {
+  margin-right: 20px;
+  z-index: 10;
+}
+
+.search-form {
+  width: auto;
+
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  margin-top: 3%;
+}
+
+form {
+  display: flex;
+  align-items: center;
+}
+
+input[type="text"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  flex-grow: 1;
+}
+
+button[type="submit"] {
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-left: 10px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 70px auto;
+  margin-top: 20%;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.popup .close {
+  display: flex;
+  position: relative;
+  top: -15px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.popup .close:hover {
+  color: red;
+}
+
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+
+.popup_header {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.popup_header h1 {
+  font-size: x-large;
+  margin: auto;
+}
+
+.content .flex {
+  margin-top: 5%;
+}
+
+.content .flex p {
+  margin-left: 15%;
+}
+
+.content .flex .dot {
+  margin-left: 20%;
+}
+
+.margin {
+  margin: auto;
+}
+
+
+@media (max-width: 1024px) {
+  .dot {
+    height: 15px;
+    width: 15px;
+  }
+
+  .SongData p {
+    font-size: small;
+  }
+}
+
+@media (max-width: 800px) {
+  .SongData p {
+    font-size: x-small;
+  }
+
 }
